[tool.ruff]
line-length = 120

[tool.poetry]
name = "pymysearch"
version = "0.1.0"
description = ""
authors = ["Huy Pham <keixi512@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
duckduckgo-search = "^6.1.7"
markdownify = "^0.12.1"
requests = "^2.32.3"
langchain-core = "^0.2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
